--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 assert_cmd = "1"
-itertools = "0.9"
+itertools = "0.10"
 parse-display = "0.4"
 regex = "1"
+strum = "0.20"
+strum_macros = "0.20"
